# chronos-panel

./: .gitignore  README.md  bun.lockb  package.json  tailwind.config.js
chronos-backend-panel/: Cargo.toml  panel.db
chronos-backend-panel/migrations/: user.sql
chronos-backend-panel/src/: authenticate_token.rs  main.rs  models.rs
src/routes/: +layout.svelte  +page.svelte
