[package]
name = "chronos-backend-panel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.3.1"}
actix-web-httpauth = "0.8.0"
derive_more = "0.99.17"
env_logger = "0.10.0"
envy = "0.4.2"
form_urlencoded = "1.2.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
jsonwebtokens-cognito = "0.1.1"
log = "0.4.19"
oauth2 = "4.4.1"
reqwest = "0.11.18"
serde = "1.0.181"
serde_json = "1.0.104"
sysinfo = "0.29.7"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
url = "2.4.0"
